# sonder-engram

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  railway.toml  requirements.txt
.github/workflows/: ci.yml
demo_renpy/: README.md  launch_sidecar.bat  launch_sidecar.sh
demo_renpy/game/: script.rpy  sonder.rpy
docs/: HANDOFF.md  PINNED_API.md
docs/session-logs/: 2026-07-02-vault-and-memory-logs.md
examples/: terminal_demo.py  web_demo.py
src/sonder_engram/: __init__.py  backend.py  config.py  npc.py  ontology.py  service.py  worker.py
tests/: test_npc_unit.py
