[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonder-engram"
version = "0.1.0"
description = "Persistent memory for game NPCs, powered by Cognee. They remember what you did."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "Apache-2.0" }
authors = [{ name = "iamphantasm0" }]
keywords = ["ai", "memory", "npc", "games", "cognee", "knowledge-graph", "renpy"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["cognee>=1.2.2"]

[project.optional-dependencies]
fastembed = ["fastembed>=0.3"]      # local, no-key embeddings
dev = ["pytest>=8"]

[project.urls]
Homepage = "https://github.com/iamphantasm0/sonder-engram"
Issues = "https://github.com/iamphantasm0/sonder-engram/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sonder_engram"]
