[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonder-engram"
version = "0.1.1"
description = "Persistent memory for game NPCs, powered by Cognee. They remember what you did."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "Apache-2.0" }
authors = [{ name = "iamphantasm0" }]
keywords = ["ai", "memory", "npc", "games", "cognee", "knowledge-graph", "renpy"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["cognee>=1.2.2"]

[project.optional-dependencies]
fastembed = ["fastembed>=0.3"]      # local, no-key embeddings
dev = ["pytest>=8"]
web = ["fastapi>=0.115", "uvicorn>=0.30", "jinja2>=3.1"]  # for easy web demos

[project.urls]
Homepage = "https://github.com/iamphantasm0/sonder-engram"
Issues = "https://github.com/iamphantasm0/sonder-engram/issues"

[project.scripts]
sonder-sidecar = "sonder_engram.service:main"
# Note: for web demo use `python examples/web_demo.py` after installing with [web]

[tool.hatch.build.targets.wheel]
packages = ["src/sonder_engram"]
